# llm-summarize-demo

./: .gitignore  LICENSE  README.md  common.py  encode-decode.py  fewshot-config.py  fewshot.py  full-fine-tuning.py  oneshot.py  peft-fine-tuning.py  pyproject.toml  requirements.txt  rlhf.py  sample-dataset.py  sample.py  trainingdata.py  zeroshot-dialogue.py  zeroshot-summarize.py
.github/: FUNDING.yml
flan-dialogue-summary-checkpoint/: .gitattributes  config.json  generation_config.json  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
sample-output/: peft-fine-tuning.md
